# obsidian-agent-workflow

./: .gitattributes  .gitignore  .gtrconfig  .pre-commit-config.yaml  .publication-boundary-local.sample.json  AGENTS.md  README.md  TEST-PERF-REPORT.md  mise.toml  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  claude-code.md  linting.md  oaw-cli-feature-catalog.md  testing-mistakes.md
scripts/: check_cli_parity.py  check_publication_boundary.py  claude-session-title-hook.sh  claude-setup.sh  gen_parity_golden.py  generate_cli_catalog.py  strip-claude-session-trailer.sh
skills/oaw/: SKILL.md
skills/oaw-research/: SKILL.md
skills/oaw-research/agents/: openai.yaml
skills/oaw-research/scripts/: oaw_research.py
skills/oaw-research/tests/: test_oaw_research.py
skills/oaw-retro-backend/: SKILL.md
skills/oaw-retro-backend/agents/: openai.yaml
skills/oaw-task-execution/: SKILL.md
skills/oaw-task-execution/agents/: openai.yaml
skills/oaw-task-review/: SKILL.md
skills/oaw-task-review/agents/: openai.yaml
skills/oaw-wrap-up/: SKILL.md
skills/oaw-wrap-up/agents/: openai.yaml
skills/oaw/agents/: openai.yaml
skills/oaw/references/: exports-and-ingestion.md  links-and-relations.md  notes-and-feedback.md  project-and-research.md  session-artifacts.md  session-phase-title-evaluation.md
skills/obsidian-capture/: SKILL.md
skills/obsidian-capture/agents/: openai.yaml
src/oaw/: __init__.py  boards.py  captures.py  catalog.py  cli.py  doctor.py  errors.py  exports.py  feedback.py  filenames.py  frontmatter.py  ingest.py  lifecycle.py  links.py  notes.py  relations.py  resolver.py  retro.py  runs.py  session_metrics.py  sessions.py  snapshot.py  tags.py  task_rename.py  typer_cli.py
src/oaw/document/: __init__.py  editing.py  envelope.py  frontmatter_yaml.py  markdown.py  model.py  obsidian_plugin.py  obsidian_syntax.py  profile.py  types.py
src/oaw/document/profile_fixtures/: __init__.py
src/oaw/document/profile_fixtures/bom-heading/: expect.json  source.md
src/oaw/document/profile_fixtures/comment-math/: expect.json  source.md
src/oaw/document/profile_fixtures/crlf-heading/: expect.json  source.md
src/oaw/document/profile_fixtures/fence-closed/: expect.json  source.md
src/oaw/document/profile_fixtures/fence-unclosed/: expect.json  source.md
src/oaw/document/profile_fixtures/frontmatter-canonical/: expect.json  source.md
src/oaw/document/profile_fixtures/frontmatter-duplicate-key/: expect.json  source.md
src/oaw/document/profile_fixtures/heading-atx/: expect.json  source.md
src/oaw/document/profile_fixtures/wikilink-embed/: expect.json  source.md
tests/: assertions.py  conftest.py  perf_fixture.py  support.py  test_boards.py  test_captures.py  test_catalog.py  test_claude_session_title_hook.py  test_cli_entry.py  test_cli_parity.py  test_doctor.py  test_doctor_cli.py  test_document_editing.py  test_document_envelope.py  test_document_frontmatter.py  test_document_markdown.py  test_document_model.py  test_document_obsidian_syntax.py  test_errors.py  test_exports_cli.py  test_feedback.py  test_filenames.py  test_frontmatter.py  test_lifecycle.py  test_links.py  test_links_cli.py  test_list_cli.py  test_markdown_profile_fixtures.py  test_note_body_input.py  test_notes.py  test_oaw.py  test_oaw_task_execution_skill.py  test_perf_resolver.py  test_project_cli.py  test_publication_boundary.py  test_relations.py  test_research_cli.py  test_resolve_cli.py  test_resolver.py  test_runs.py  (+10 more)
tests/fixtures/: cli_parity_golden.json
tests/fixtures/markdown_profile/callouts-quotes/canonical/: expect.json  source.md
tests/fixtures/markdown_profile/callouts-quotes/crlf-canonical/: expect.json  source.md
tests/fixtures/markdown_profile/callouts-quotes/crlf-nested/: expect.json  source.md
tests/fixtures/markdown_profile/callouts-quotes/malformed-unclosed/: expect.json  source.md
tests/fixtures/markdown_profile/callouts-quotes/nested-adjacent/: expect.json  source.md
tests/fixtures/markdown_profile/comments-math/canonical/: expect.json  source.md
tests/fixtures/markdown_profile/embeds-blockids/canonical/: source.md  (+1 more)
tests/fixtures/session_lookup/: codex-complete.jsonl  codex-missing.jsonl
tests/fixtures/session_snapshot/: codex-active-child.jsonl  codex-archived-grandchild.jsonl  codex-archived-parent.jsonl
(+97 files in other folders)
