[project]
name = "oaw"
version = "0.1.0"
description = "Resolve Obsidian IDs and update project task lifecycle state"
requires-python = ">=3.13"
dependencies = [
    "markdown-it-py>=4.0.0",
    "pyyaml>=6.0.3",
    "typer>=0.26.8,<0.27",
]

[project.scripts]
oaw = "oaw.cli:main"

[dependency-groups]
dev = [
    "pyinstrument",
    "pyrefly",
    "pytest",
    "pytest-cov",
    "pytest-xdist>=3.8.0",
    "pyyaml>=6.0.3",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/oaw"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "TID251"]
ignore = ["E501"]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"argparse".msg = "The OAW frontend uses Typer; argparse is allowed only in standalone scripts."

[tool.ruff.lint.per-file-ignores]
"scripts/check_cli_parity.py" = ["TID251"]
"skills/oaw-research/scripts/oaw_research.py" = ["TID251"]

[tool.pyrefly]
project-includes = ["src/**/*.py", "tests/**/*.py"]
project-excludes = ["**/__pycache__", ".venv"]
disable-project-excludes-heuristics = true
python-version = "3.13"
search-path = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
# Parallel by default: the filesystem-heavy per-test vault fixtures scale well
# across workers. Use -n 0 for serial runs (profiling, --durations,
# pyinstrument, or debugging a single test). CLI tests default to in-process
# cli.main via run_oaw, which swaps os.environ per call: safe under xdist's
# process-per-worker model, unsafe with any thread-based test parallelism.
addopts = ["-n", "auto"]
